Integrated mBank CSV parser with backend services:
- Added domain model for parsing mBank CSV files: `CsvParseResult`, `ParseError`, and related tests.
- Implemented `MbankCsvParser` capable of handling Polish CSV formatting and validation.
- Created `CsvParseService` for mapping and transforming CSV data with user and account context.
- Extended test coverage for parser scenarios, including edge cases and partial parses.
- Introduced `CsvParsingException` for handling parsing errors during validation and processing.
- Added API views (`CsvParseResultView`, `ParseErrorView`) to expose parsed results.
- Documented implementation details in `TASK-0040/plan.md`.